--- a/HTML  Practicals/question3.html
+++ b/HTML  Practicals/question3.html
@@ -1,4 +1,6 @@
-<html>
+<!-- Deepak Thapa -->
+<!-- Practicals -->
+<!-- Question 3. Create an HTML document for displaying the current semester's timetable -->
 <html>
 <head>
     <title>Question 3</title>
