created more pages

--- a/HTML  Practicals/question4/courses.html
+++ b/HTML  Practicals/question4/courses.html
@@ -2,18 +2,14 @@
 <!-- Practicals -->
 <!-- Question 4. Create a website with horizontal and vertical frames. Top horizontal frame needs to show your college's name and logo. bottom horizontal frame is to be split into two vertical frames. the left frame has hyperlinks to pages related to faculty, cources, student activites, etc. the right frame shows the corresponding webpage based on the link cliked on the left frame. -->
 <html>
+<html>
 <head>
-    <title>College Home</title>
+    <title>College courses</title>
 </head>
 <body>
 
-    <frameset rows="50%, 50%">
-        <frame src="collegename.html"></frame>
-        <frameset cols="50%, 50%">
-            <frame src="faculty.html"></frame>
-            <frame src="courses.html"></frame>
-        </frameset>
-    </frameset>
+    <img src="electronics.svg" alt="electronics">
+    <h1>1. electronics </h1>
     
 </body>
 </html>
