--- a/HTML  Practicals/question4/collegename.html
+++ b/HTML  Practicals/question4/collegename.html
@@ -1,3 +1,6 @@
+<!-- Deepak Thapa -->
+<!-- Practicals -->
+<!-- Question 4. Create a website with horizontal and vertical frames. Top horizontal frame needs to show your college's name and logo. bottom horizontal frame is to be split into two vertical frames. the left frame has hyperlinks to pages related to faculty, cources, student activites, etc. the right frame shows the corresponding webpage based on the link cliked on the left frame. -->
 <html>
 <html>
 <head>
