--- a/CSS/internal css/index.html
+++ b/CSS/internal css/index.html
@@ -1,4 +1,6 @@
-<html>
+<!-- Deepak thapa -->
+<!-- Practical -->
+<!-- internal CSS starts here 27/01/2022 -->
 <html>
 <head>
     <title>Internal CSS</title>
