--- a/HTML  Practicals/question2/fruits.html
+++ b/HTML  Practicals/question2/fruits.html
@@ -1,3 +1,6 @@
+<!-- Deepak Thapa -->
+<!-- Practical HTML -->
+<!-- Question 2. Create an HTML document with ordered list , inserting images, Internal and external linking. -->
 <html>
 <html>
 <head>
